src/backend/optix/snapshots/rjit__backend__optix__test__load_add_f32.snap
---
source: src/backend/optix/test.rs
expression: ir.kernel_history()
---
Kernel History:
Launched CUDA Kernel 8813347026471284664 with 10 elements
===============================================
Kernel 8813347026471284664:

.version 8.0
.target sm_86
.address_size 64

.entry cujit(
	.param .align 8 .b8 params[40]) {

	.reg.b8   %b <12>; .reg.b16 %w<12>; .reg.b32 %r<12>;
	.reg.b64  %rd<12>; .reg.f32 %f<12>; .reg.f64 %d<12>;
	.reg.pred %p <12>;

	mov.u32 %r0, %ctaid.x;
	mov.u32 %r1, %ntid.x;
	mov.u32 %r2, %tid.x;
	mad.lo.u32 %r0, %r0, %r1, %r2; // r0 <- Index

	// Index Conditional (jump to done if Index >= Size).
	ld.param.u32 %r2, [params]; // r2 <- params[0] (Size)
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r0 >= r2
	@%p0 bra done; // if p0 => done
	
	mov.u32 %r3, %nctaid.x; // r3 <- nctaid.x
	mul.lo.u32 %r1, %r3, %r1; // r1 <- r3 * r1
	
body: // sm_86

	// [0]: ScheduleVar { op: Data, deps: [], ty: F32, reg: 4, data: Buffer(0), sbt_hash: 0 } =>

	// [1]: ScheduleVar { op: Idx, deps: [], ty: U32, reg: 5, data: None, sbt_hash: 0 } =>
	mov.u32 %r5, %r0;


	// [2]: ScheduleVar { op: Literal, deps: [], ty: Bool, reg: 6, data: Literal(1), sbt_hash: 0 } =>
	mov.pred %p6, 0x1;


	// [3]: ScheduleVar { op: Gather, deps: [SVarId(0), SVarId(1), SVarId(2)], ty: F32, reg: 7, data: Buffer(1), sbt_hash: 0 } =>
	ld.param.u64 %rd0, [params+8];
	mad.wide.u32 %rd3, %r5, 4, %rd0;
	ld.global.nc.f32 %f7, [%rd3];

	// [4]: ScheduleVar { op: Add, deps: [SVarId(3), SVarId(3)], ty: F32, reg: 8, data: Buffer(2), sbt_hash: 0 } =>
	add.f32 %f8, %f7, %f7;

	// [5]: ScheduleVar { op: Idx, deps: [], ty: U32, reg: 9, data: None, sbt_hash: 0 } =>
	mov.u32 %r9, %r0;


	// [6]: ScheduleVar { op: Literal, deps: [], ty: Bool, reg: 10, data: Literal(1), sbt_hash: 0 } =>
	mov.pred %p10, 0x1;


	// [7]: ScheduleVar { op: Scatter { op: None }, deps: [SVarId(4), SVarId(4), SVarId(5), SVarId(6)], ty: F32, reg: 11, data: None, sbt_hash: 0 } =>
	ld.param.u64 %rd0, [params+24];
	mad.wide.u32 %rd3, %r9, 4, %rd0;
	st.global.f32 [%rd3], %f8;

	//End of Kernel:

	add.u32 %r0, %r0, %r1; // r0 <- r0 + r1
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r1 >= r2
	@!%p0 bra body; // if p0 => body


done:

	ret;
}

